[gd_scene load_steps=6 format=2]

[ext_resource path="res://systems/ui/dialogSystem/assets/DialogueBox.png" type="Texture" id=1]
[ext_resource path="res://systems/ui/dialogSystem/assets/testPort.png" type="Texture" id=2]
[ext_resource path="res://systems/ui/dialogSystem/dialogSystem.gd" type="Script" id=3]
[ext_resource path="res://systems/ui/dialogSystem/assets/DeterminationSansWebRegular-369X.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
extra_spacing_bottom = 2
extra_spacing_space = 5
font_data = ExtResource( 4 )

[node name="dialogBox" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="boxTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -83.0
margin_right = 148.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 148, 83 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="regularText" type="RichTextLabel" parent="boxTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -29.0
margin_right = 130.5
margin_bottom = 29.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "* Test dialog 0
* Test dialog 1
* Test dialog 2"
text = "* Test dialog 0
* Test dialog 1
* Test dialog 2"
scroll_active = false

[node name="portraitText" type="Control" parent="boxTexture"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="textDips" type="RichTextLabel" parent="boxTexture/portraitText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -28.5
margin_right = 131.0
margin_bottom = 29.5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "* Test dialog 0
* Test dialog 1
* Test dialog 2"
text = "* Test dialog 0
* Test dialog 1
* Test dialog 2"
scroll_active = false

[node name="portraitDisp" type="TextureRect" parent="boxTexture/portraitText"]
anchor_left = 0.142
anchor_top = 0.5
anchor_right = 0.142
anchor_bottom = 0.5
margin_left = -22.532
margin_top = -25.0
margin_right = 22.468
margin_bottom = 25.0
texture = ExtResource( 2 )

[node name="textTimer" type="Timer" parent="."]
